[metadata]
name = indigo_styletransfer
summary = DEEP learning application for image Style Transfer.
description-file =
    README.md
author = Lara Lloret Iglesias
author-email = lloret@ifca.unican.es
license = Apache-2
home-page = http://github.com/indigo-dc/indigo_styletransfer
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6

[files]
packages =
    indigo_styletransfer

[entry_points]

deepaas.model =
    indigo_styletransfer = indigo_styletransfer.api
